# wtr

./: .gitignore  Cargo.toml  README.md  justfile
src/: ascii.rs  client.rs  common.rs  config.rs  error.rs  main.rs  opt.rs  params.rs  printer.rs  weather.rs
