[package]
name    = "wtr"
version = "0.0.1"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2018"

[dependencies]
structopt  = "0.3.21"
snafu      = "0.6.10"
serde_json = "1.0"
dotenv     = "0.15.0"

[dependencies.reqwest]
version  = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version  = "1.0.126"
features = ["derive"]
