[package]
name    = "wtr"
version = "0.0.1"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2018"

[dependencies]
chrono     = "0.4"
dotenv     = "0.15.0"
serde_json = "1.0.0"
snafu      = "0.6.10"
structopt  = "0.3.21"
toml       = "0.5.8"
xdg        = "2.2.0"
dirs       = "3.0.2"

[dependencies.reqwest]
version  = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version  = "1.0.126"
features = ["derive"]
